unpackaged/main/default/objects/ETT_Goods_Issue_Lines__c/ETT_Goods_Issue_Lines__c.object-meta.xml
<CustomObject>
    <label>Goods Issue Lines</label>
    <nameField>
        <displayFormat>GLN-{00000}</displayFormat>
        <label>Goods Line No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods Issue Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>