unpackaged/main/default/objects/ETT_Goods_Issue_Lines__c/fields/Avail_Qty__c.field-meta.xml
<CustomField>
    <fullName>Avail_Qty__c</fullName>
    <formula>Tool_Material_Name__r.ETT_Allocated_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avail. Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>