unpackaged/main/default/objects/ETT_Goods_Issue_Lines__c/fields/Goods_Issue_Note__c.field-meta.xml
<CustomField>
    <fullName>Goods_Issue_Note__c</fullName>
    <label>Goods Issue Note</label>
    <referenceTo>ETT_Goods_Issue_Note__c</referenceTo>
    <relationshipLabel>Goods Issue Lines</relationshipLabel>
    <relationshipName>Goods_Issue_Lines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>