unpackaged/main/default/objects/ETT_Goods_Issue_Lines__c/fields/Issued_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issued_Quantity__c</fullName>
    <label>Issued Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>