unpackaged/main/default/objects/ETT_Goods_Issue_Lines__c/fields/Tool_Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_Material_Name__c</fullName>
    <label>Item Name</label>
    <referenceTo>ETT_Tools_Master__c</referenceTo>
    <relationshipLabel>Goods Issue Lines</relationshipLabel>
    <relationshipName>Goods_Issue_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>