unpackaged/main/default/objects/ETT_Goods_Issue_Lines__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <formula>Text(Tool_Material_Name__r.UOM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOM</label>
    <type>Text</type>
</CustomField>